# prediction-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  progress.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2c09afbbdcdf_add_prediction_context.py  927f4f166d09_add_query_logs.py  edb2e385f26b_initial_schema_with_pgvector.py
deploy/: connect.sh  deploy.sh  ingest.sh  logs.sh  make_session.py  psql.sh  refresh.sh  secrets.sh  status.sh  verify.sh
deploy/cloudformation/: compute-stack.yaml  data-stack.yaml  secrets-stack.yaml
docs/: README.md
docs/aws-deploy/: 2026-07-04-minimal-aws-deploy-design.md  2026-07-04-minimal-aws-deploy-plan.md  2026-07-10-rds-migration-design.md  2026-07-10-rds-migration-plan.md  README.md
docs/citations/: 2026-07-18-rag-citations-design.md  2026-07-18-rag-citations-plan.md
docs/eval-framework/: 2026-06-25-eval-pipeline-design.md
docs/extraction-quality/: 2026-06-06-annotation-set-design.md  2026-06-06-annotation-set-plan.md  2026-06-06-claim-reconstruction-design.md  2026-06-06-claim-reconstruction-plan.md  2026-06-12-extraction-prompt-variant-design.md  2026-06-12-extraction-prompt-variant-plan.md
docs/generation/: 2026-06-22-generation-design.md  2026-06-22-generation-plan.md  2026-06-25-eval-research-summary.md  2026-06-27-generation-eval-v2-plan.md  2026-06-29-rag-answer-contract-plan.md
docs/hybrid-retrieval/: 2026-07-11-hybrid-retrieval-design.md  2026-07-11-hybrid-retrieval-plan.md
docs/ingestion-to-aws/: 2026-05-07-integration-smoke-plan.md  2026-06-03-ingestion-run-wrapper-design.md  2026-06-03-ingestion-run-wrapper-plan.md  2026-06-03-optional-embeddings-plan.md
docs/observability/: 2026-07-20-query-logging-design.md  2026-07-20-query-logging-plan.md
docs/rag-eval/: 2026-06-29-rag-e2e-eval-design.md  2026-06-29-relevance-threshold-design.md  2026-06-29-relevance-threshold-plan.md
runbook/: bot.md  deploy.md  first-ingest.md  ingest.md  stop-env.md  verify.md
scripts/: _ingestion_setup.py  integration_smoke.py  run_extraction.py  run_ingestion.py  run_verification.py  run_verification_cycle.py  sample_arestovich_posts.py  v2_quality_eval.py  verification_eval.py
scripts/generation/: gold.py  (+7 more)
tests/: fakes.py  test_alembic.py  test_analysis_extractor.py  test_answer_orchestrator.py  test_app_endpoints.py  test_backfill_embeddings.py  test_bot_handlers.py  test_bot_runner.py  test_bot_texts.py  test_build_generation_gold.py  test_citations.py  test_config.py  test_deploy_connect.py  test_deploy_deploy.py  test_deploy_logs.py  test_deploy_refresh.py  test_deploy_status.py  test_deploy_verify.py  test_embedding_text.py  test_engine.py  test_eval_common_clients.py  test_eval_common_report.py  test_eval_common_run_eval.py  test_eval_common_runner.py  test_extraction_quality_eval.py  test_factory.py  test_generation_gold.py  test_generation_judge_prompts.py  test_generation_metrics.py  test_generation_scorers.py  test_generation_sentences.py  test_ingestion_orchestrator.py  test_llm_client.py  test_llm_embedding.py  test_llm_prompts.py  test_query_models.py  test_query_orchestrator.py  test_query_planner.py  test_retrieval_metrics.py  test_retrieval_query_gold.py  (+10 more)
(+68 files in other folders)
